2010-03-01  Thomas Moulard  <thomas.moulard@gmail.com>

	Implement function caching.
	* include/Makefile.am: Distribute new header and source.
	* include/roboptim/core/cached-function.hh: New.
	* include/roboptim/core/cached-function.hxx: New.
	* tests/Makefile.am: Compile new test case.
	* tests/cached-function.cc: New.
	* tests/cached-function.stdout: New.
	* tests/testsuite.at: Add new test case.

2010-02-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix parameter code.
	* include/roboptim/core/solver.hxx: Fix getParameter,
	std::map::operator[] is /not/ const (!).
	* src/solver.cc: Fix display code to remove spurious
	pointer display (previously was displaying output stream address).

2010-02-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix typo in source filename.
	* src/Makefile.am: Fix typo.

2010-02-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Implement run-time parameters management.
	* include/roboptim/core/solver.hh,
	* include/roboptim/core/solver.hxx:
	Add parameters related methods.
	* src/Makefile.am: Compile ``solver.cc''.
	* src/roboptim-core-dummy-plugin.cc: Add dummy parameters.
	* src/solver.cc: New.
	* tests/plugin.stdout,
	* tests/simple.stdout: Regenerate.

2010-01-14  Thomas Moulard  <thomas.moulard@gmail.com>

	Add ChangeLog information to spec file.
	* roboptim-core.spec.in: Add ChangeLog information.

2010-01-14  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix RPM spec file.
	* roboptim-core.spec.in: Here.

2010-01-13  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux: Synchronize.

2010-01-13  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix rpm source URL.
	* roboptim-core.spec.in: Fix wrong source URL.

2010-01-13  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix rpm spec file.
	* roboptim-core.spec.in: Distribute plug-in properly.

2010-01-13  Thomas Moulard  <thomas.moulard@gmail.com>

	Update rpm spec file ChangeLog.
	* roboptim-core.spec.in: Here.
